--- a/desafio iguana page/index.html
+++ b/desafio iguana page/index.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
     </head>
 <body>
-    <head></head>
+    <head>
+        <h1>IGUANAS</h1>
+        <img src="./assets/img/bg-header.jpg" alt="iguanita">
+    </head>
     <main>
-        <section><img src="" alt=""></section>
         <article>
             <div class="a"><p>La iguana es un reptil perteneciente a la familia Iguanadiae. Su tamaño está entre los 15 cm hasta los 2 metros de largo y puede llegar a pesar unos 15 kg. Cuando están jóvenes tienen una coloración con tonos verdes y al ir madurando predomina un color grisáceo con crestas o espinas en su espalda. La alimentación de la iguana va variando según su etapa de vida, pero la mayor parte de sus años son herbívoras. Viven en lugares tropicales con mucha vegetación y es un animal que puede ser domesticado.</p></div>
             <div class="b"> <img src="./assets/img/iguana-1.jpg" alt="" ></div>
