--- a/06 bootstrap/suricata.html
+++ b/06 bootstrap/suricata.html
@@ -32,15 +32,144 @@
             </div>
         </div>
     </nav>
-
+    <article>
+        <div class="text-center">
+            <h1 class="w-50 mx-auto">nuestros Productos</h1>
+        </div>
+        <div>
+            <!-- cards -->
+            <div class="row g-0">
+                <div class="col-4">
+                    <div class="card mt-4 mx-auto mx-sm-3 anchoCentrarpequenio">
+                        <img src="./assets/img/colaciones.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="#" class="card-link">Ver más</a>
+                            <a href="#" class="card-link">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card mt-4 mx-auto mx-sm-3 anchoCentrarpequenio" >
+                        <img src="./assets/img/desayunos.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">desayunos</h5>
+                            <p class="card-text">Iste natus error sit voluptatem accusantium doloremque laudantium, totam
+                                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                                dicta sunt explicabo.</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="#" class="card-link">Ver más</a>
+                            <a href="#" class="card-link">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card mt-4 mx-auto mx-sm-3 anchoCentrarpequenio" >
+                        <img src="./assets/img/bebidas.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Bebidas</h5>
+                            <p class="card-text">Doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+                                veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="#" class="card-link">Ver más</a>
+                            <a href="#" class="card-link">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card mt-4 mx-auto mx-sm-3 anchoCentrarpequenio" >
+                        <img src="./assets/img/verduras.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Verduras</h5>
+                            <p class="card-text">Ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                                dicta sunt explicabo.</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="#" class="card-link">Ver más</a>
+                            <a href="#" class="card-link">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card mt-4 mx-auto mx-sm-3 anchoCentrarpequenio" >
+                        <img src="./assets/img/dulces.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Dulces</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="#" class="card-link">Ver más</a>
+                            <a href="#" class="card-link">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card mt-4 mx-auto mx-sm-3 anchoCentrarpequenio" >
+                        <img src="./assets/img/empanadas.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Empanadas</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the card's content.</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="#" class="card-link">Ver más</a>
+                            <a href="#" class="card-link">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
+    <section>
+        <div class="text-center py-5 mt-4 d-none d-md-block">
+            <div class="d-inline-block mx-3">
+                <h3>Ahora Aceptamos</h3>
+            </div>
+            <div class="d-inline-block mx-3">
+                <i class="fa-brands fa-cc-visa mx-3"></i>
+                <i class="fa-brands fa-cc-mastercard mx-3"></i>
+                <i class="fa-brands fa-cc-amex mx-3"></i>
+                <i class="fa-brands fa-cc-diners-club mx-3"></i>
+                <i class="fa-brands fa-cc-amex mx-3"></i>
+                <i class="fa-brands fa-cc-diners-club mx-3"></i>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <!-- <i class="fa-brands fa-cc-visa"></i>
-    <i class="fa-brands fa-cc-mastercard"></i>
-    <i class="fa-brands fa-cc-amex"></i>
-    <i class="fa-brands fa-cc-diners-club"></i> -->
 </body>
 
 </html>
