--- a/06 bootstrap/suricata.html
+++ b/06 bootstrap/suricata.html
@@ -32,14 +32,14 @@
             </div>
         </div>
     </nav>
-    <article>
+    <article class="py-5">
         <div class="text-center">
             <h1 class="w-50 mx-auto">nuestros Productos</h1>
         </div>
         <div>
             <!-- cards -->
             <div class="row g-0">
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card mt-4 mx-auto mx-sm-3 anchoCentrarpequenio">
                         <img src="./assets/img/colaciones.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card mt-4 mx-auto mx-sm-3 anchoCentrarpequenio" >
                         <img src="./assets/img/desayunos.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card mt-4 mx-auto mx-sm-3 anchoCentrarpequenio" >
                         <img src="./assets/img/bebidas.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card mt-4 mx-auto mx-sm-3 anchoCentrarpequenio" >
                         <img src="./assets/img/verduras.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card mt-4 mx-auto mx-sm-3 anchoCentrarpequenio" >
                         <img src="./assets/img/dulces.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-md-4">
                     <div class="card mt-4 mx-auto mx-sm-3 anchoCentrarpequenio" >
                         <img src="./assets/img/empanadas.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -166,6 +166,11 @@
             </div>
         </div>
     </section>
+    <footer class=" py-5">
+        <div class="mt-5 mt-md-0 mx-auto">
+            <img class="w-100" src="./assets/img/logo-footer.png" alt="logo">
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
