--- a/07 bootstrap-desafio_evaluado/index.html
+++ b/07 bootstrap-desafio_evaluado/index.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-body-nav text-center py-2" data-bs-theme="dark">
+<body class="roboto-light">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg text-center py-2" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand w-25" href="#"><img class="w-100" src="./assets/img/logo-white.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -51,93 +51,113 @@
         </div>
     </nav>
 
-    <article class="my-3">
-        <div class="card mx-auto" style="width: 18rem;">
-            <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-item roboto-light dark rem">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
-                <p class="card-text grey mb-0">Plumones Manolino</p>
-                <p class="card-text grey"><i class="fa-solid fa-location-dot"></i>9191 Avenida
-                    Vitacura, Chile</p>
-            </div>
-            <hr class="mx-1">
-            <div class="card-body ms-auto mb-0">
-                <p class="card-link grey d-inline-block roboto-light">$45.990</p>
-                <p class="card-link a-succes d-inline-block roboto-medium rem">$22.999</p>
-            </div> <!-- yo use parrafo que es en bloque y le puse dipley inline , pero pude haber usado span -->
+    <section>
+        <div class="row g-0">
+                <div class="col-sm-6 col-md-4">
+                    <div class="card mt-5 mx-auto mx-sm-4 anchocentrado">
+                    <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title h5-sn ">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
+                      <p class="card-text grey my-0">Plumones Manolino</p>
+                      <p class="card-text f-s grey"><i class="fa-solid fa-location-dot"></i>9191 Avenida Vitacura, Chile</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item text-end"><span class="grey">$45.990</span> <span class="succes roboto-medium">$22.990</span></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="card mt-5 mx-auto mx-sm-4 anchocentrado">
+                    <img src="./assets/img/cupon-2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title h5-sn ">Entrada para compartir + platos de fondo + postres + bebestibles</h5>
+                      <p class="card-text grey my-0">V for Vegan</p>
+                      <p class="card-text f-s grey"><i class="fa-solid fa-location-dot"></i>777 Jesse Pinkman, Chile</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item text-end"><span class="grey">$45.990</span> <span class="succes roboto-medium">$22.990</span></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="card mt-5 mx-auto mx-sm-4 anchocentrado">
+                    <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title h5-sn ">Evaluación integral + blanqueamiento dental led + limpieza + fluoración</h5>
+                      <p class="card-text grey my-0">Clínica Dental Quijada</p>
+                      <p class="card-text f-s grey"><i class="fa-solid fa-location-dot"></i>1342, Blanco Encalada, Chile</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item text-end"><span class="grey">$45.990</span> <span class="succes roboto-medium">$22.990</span></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="card mt-5 mx-auto mx-sm-4 anchocentrado">
+                    <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title h5-sn ">Colación para 2 personas + postre (no incluye bebidas)</h5>
+                      <p class="card-text grey my-0">Suricata almacen</p>
+                      <p class="card-text f-s grey"><i class="fa-solid fa-location-dot"></i>1071 Miguel Claro, Chile</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item text-end"><span class="grey">$45.990</span> <span class="succes roboto-medium">$22.990</span></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="card mt-5 mx-auto mx-sm-4 anchocentrado">
+                    <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title h5-sn ">1, 2 o 4 tickets para Stukids. Elige sucursal</h5>
+                      <p class="card-text grey my-0">Stukids Centro de Eventos</p>
+                      <p class="card-text f-s grey"><i class="fa-solid fa-location-dot"></i>133 El tranque, Chile</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item text-end"><span class="grey">$45.990</span> <span class="succes roboto-medium">$2.500</span></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="card mt-5 mx-auto mx-sm-4 anchocentrado">
+                    <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title h5-sn ">San Pedro de Atacama : 1 o 2 noches en alojamiento a elección</h5>
+                      <p class="card-text grey my-0">D-Latam Travel</p>
+                      <p class="card-text f-s grey"><i class="fa-solid fa-location-dot"></i>9191 Avenida Vitacura, Chile</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item text-end"><span class="grey">$45.990</span> <span class="succes roboto-medium">$22.990</span></li>
+                    </ul>
+                  </div>
+                </div>
         </div>
-        <div class="card mx-auto" style="width: 18rem;">
-            <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-item roboto-light dark rem">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
-                <p class="card-text grey mb-0">Plumones Manolino</p>
-                <p class="card-text grey"><i class="fa-solid fa-location-dot"></i>9191 Avenida
-                    Vitacura, Chile</p>
-            </div>
-            <hr class="mx-1">
-            <div class="card-body ms-auto mb-0">
-                <p class="card-link grey d-inline-block roboto-light">$45.990</p>
-                <p class="card-link a-succes d-inline-block roboto-medium rem">$22.999</p>
-            </div>
-        </div>
-        <div class="card mx-auto" style="width: 18rem;">
-            <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-item roboto-light dark rem">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
-                <p class="card-text grey mb-0">Plumones Manolino</p>
-                <p class="card-text grey"><i class="fa-solid fa-location-dot"></i>9191 Avenida
-                    Vitacura, Chile</p>
-            </div>
-            <hr class="mx-1">
-            <div class="card-body ms-auto mb-0">
-                <p class="card-link grey d-inline-block roboto-light">$45.990</p>
-                <p class="card-link a-succes d-inline-block roboto-medium rem">$22.999</p>
-            </div>
-        </div>
-        <div class="card mx-auto" style="width: 18rem;">
-            <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-item roboto-light dark rem">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
-                <p class="card-text grey mb-0">Plumones Manolino</p>
-                <p class="card-text grey"><i class="fa-solid fa-location-dot"></i>9191 Avenida
-                    Vitacura, Chile</p>
-            </div>
-            <hr class="mx-1">
-            <div class="card-body ms-auto mb-0">
-                <p class="card-link grey d-inline-block roboto-light">$45.990</p>
-                <p class="card-link a-succes d-inline-block roboto-medium rem">$22.999</p>
-            </div>
-        </div>
-        <div class="card mx-auto" style="width: 18rem;">
-            <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-item roboto-light dark rem">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
-                <p class="card-text grey mb-0">Plumones Manolino</p>
-                <p class="card-text grey"><i class="fa-solid fa-location-dot"></i>9191 Avenida
-                    Vitacura, Chile</p>
-            </div>
-            <hr class="mx-1">
-            <div class="card-body ms-auto mb-0">
-                <p class="card-link grey d-inline-block roboto-light">$45.990</p>
-                <p class="card-link a-succes d-inline-block roboto-medium rem">$22.999</p>
-            </div>
-        </div>
-        <div class="card mx-auto" style="width: 18rem;">
-            <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-item roboto-light dark rem">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
-                <p class="card-text grey mb-0">Plumones Manolino</p>
-                <p class="card-text grey"><i class="fa-solid fa-location-dot"></i>9191 Avenida
-                    Vitacura, Chile</p>
-            </div>
-            <hr class="mx-1">
-            <div class="card-body ms-auto mb-0">
-                <p class="card-link grey d-inline-block roboto-light">$45.990</p>
-                <p class="card-link a-succes d-inline-block roboto-medium rem">$22.999</p>
-            </div>
-        </div>
-    </article>
+    </section>
 
+    <section class="bg mt-5 p-4">
+        <div>
+            <h2> Recibe tus cupones en tu correo</h2>
+        </div>
+        <div>
+            <form>
+                <div class="mb-3">
+                  <input type="email" class="form-control" placeholder="Nombre" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Correo Electrónico">
+                </div>
+                <button type="submit" class="btn btn-light d-block mx-auto px-4">Enviar</button>
+              </form>
+        </div>
+    </section>
+    <footer class="text-center pt-4">
+        <div>
+            <img src="./assets/img/logo-black.png" alt="">
+        </div>
+        <div class="p-2 pb-4"> 
+            © 2018 Cuppon Latam .Todos los derechos reservados.
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
