--- a/07 bootstrap-desafio_evaluado/index.html
+++ b/07 bootstrap-desafio_evaluado/index.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-body-nav text-center py-2" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-nav text-center py-2" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand w-25" href="#"><img class="w-100" src="./assets/img/logo-white.png" alt=""></a>
+            <a class="navbar-brand w-25" href="#"><img src="./assets/img/logo-white.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -51,8 +51,8 @@
         </div>
     </nav>
 
-    <article class="my-3">
-        <div class="card mx-auto" style="width: 18rem;">
+    <article class="g-0 row">
+        <div class="card mt-5 mx-auto col-4" style="width: 18rem;">
             <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-item roboto-light dark rem">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
@@ -60,13 +60,13 @@
                 <p class="card-text grey"><i class="fa-solid fa-location-dot"></i>9191 Avenida
                     Vitacura, Chile</p>
             </div>
-            <hr class="mx-1">
+            <hr class="mx-1 my-0">
             <div class="card-body ms-auto mb-0">
                 <p class="card-link grey d-inline-block roboto-light">$45.990</p>
                 <p class="card-link a-succes d-inline-block roboto-medium rem">$22.999</p>
             </div> <!-- yo use parrafo que es en bloque y le puse dipley inline , pero pude haber usado span -->
         </div>
-        <div class="card mx-auto" style="width: 18rem;">
+        <div class="card mt-5 mx-auto col-4" style="width: 18rem;">
             <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-item roboto-light dark rem">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
@@ -80,7 +80,7 @@
                 <p class="card-link a-succes d-inline-block roboto-medium rem">$22.999</p>
             </div>
         </div>
-        <div class="card mx-auto" style="width: 18rem;">
+        <div class="card mt-5 mx-auto col-4" style="width: 18rem;">
             <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-item roboto-light dark rem">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
@@ -94,7 +94,7 @@
                 <p class="card-link a-succes d-inline-block roboto-medium rem">$22.999</p>
             </div>
         </div>
-        <div class="card mx-auto" style="width: 18rem;">
+        <div class="card mt-5 mx-auto col-4" style="width: 18rem;">
             <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-item roboto-light dark rem">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
@@ -108,7 +108,7 @@
                 <p class="card-link a-succes d-inline-block roboto-medium rem">$22.999</p>
             </div>
         </div>
-        <div class="card mx-auto" style="width: 18rem;">
+        <div class="card mt-5 mx-auto col-4" style="width: 18rem;">
             <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-item roboto-light dark rem">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
@@ -122,7 +122,7 @@
                 <p class="card-link a-succes d-inline-block roboto-medium rem">$22.999</p>
             </div>
         </div>
-        <div class="card mx-auto" style="width: 18rem;">
+        <div class="card mt-5 mx-auto col-4" style="width: 18rem;">
             <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-item roboto-light dark rem">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
