--- a/13 bootstrapjs ricomida/index2.html
+++ b/13 bootstrapjs ricomida/index2.html
@@ -17,7 +17,7 @@
    1° padding al nav -->
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark padd-nav" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-sm bg-dark padd-nav" data-bs-theme="dark">
             <div class="container">
               <a class="navbar-brand" href="#">Ricomida</a>
               <div>
