--- a/07 bootstrap-desafio_evaluado/index.html
+++ b/07 bootstrap-desafio_evaluado/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/edfe78188f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body class="roboto-light">
@@ -54,7 +54,7 @@
     <section>
         <div class="row g-0">
                 <div class="col-sm-6 col-md-4">
-                    <div class="card mt-5 mx-auto mx-sm-4 anchocentrado">
+                    <div class="card mt-5 mx-auto mx-sm-4 my-auto anchocentrado">
                     <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title h5-sn ">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
