corregi breakpoint del 2do card

--- a/13 bootstrapjs ricomida/index3.html
+++ b/13 bootstrapjs ricomida/index3.html
@@ -219,7 +219,7 @@
         </div>
      </div>
     </div>
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-sm-4">
       <div class="card mx-auto mx-sm-4 h-100" >
         <img src="./assets/img/recipe-card-2.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -229,7 +229,7 @@
       </div>
     </div>
     <div class="col-12 col-sm-4">
-      <div class="card mx-auto mx-sm-4 py-auto h-100" >
+      <div class="card mx-auto mx-sm-4 h-100" >
         <img src="./assets/img/recipe-card-3.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title fs-4 cabin-condensed-bold">PLATEADA</h5>
