--- a/15 prueba  viajes chile/index.html
+++ b/15 prueba  viajes chile/index.html
@@ -18,14 +18,14 @@
 
     <head><!-- poner la imagen de fondo aca -->
         <div class="container"><!-- espaciado -->
-            <nav class="navbar navbar-expand-md bg-body-tertiary">
-                <div class="container-fluid">
+            <nav class="navbar navbar-expand-md bg-body-tertiary"><!-- eliminar el bg body tertiary  y agregar en este caso fixed-top-->
+                <div class="container-fluid"><!-- sepuede simplemente eliminar el fluis -->
                     <a class="navbar-brand" href="#"> <img class="me-2" src="assets/img/viajes.svg" alt="svg"><!-- margen a la imagen -->Viajes Chile</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav"><!-- alinear el contenido a al final -->
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav"><!-- alinear el contenido a al final  ms-auto rellename con margin a la izquierda para que se vea a la derecha-->
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
