--- a/15 prueba  viajes chile/index.html
+++ b/15 prueba  viajes chile/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <head><!-- poner la imagen de fondo aca -->
+    <head>
         <div class="container"><!-- espaciado -->
             <nav class="navbar navbar-expand-md bg-body-tertiary"><!-- eliminar el bg body tertiary  y agregar en este caso fixed-top-->
                 <div class="container-fluid"><!-- sepuede simplemente eliminar el fluis -->
